_sass/_layout.scss
body {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(2, minmax(2em, auto));
}

header.main {
    position: sticky;
    display: flex;
    align-items: flex-end;
    grid-column: 1 / span 6;
    top: .5em;

    .logo {
        flex: 1;
    }

    .nav {
        flex: 1;
    }
}

.content {
    grid-row: 2;
    grid-column: 1 / span 6;
    padding: .5em;
}

.info {
    padding-top: 3em;
    max-width: 680px;

    img {
        margin-left: 2em;
    }
}

.projects-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;

    @media (min-width: 768px) {
        grid-template-columns: repeat(2, 1fr);
    }

    @media (min-width: 1024px) {
        grid-template-columns: repeat(3, 1fr);
        margin-right: 11em;
    }
}

.project-preview {
    display: block;

    picture,
    img {
        width: 100%;
    }
}

.project-gallery {
    display: grid;
    gap: 1rem;
}

.project-image {
    margin: 0;
}

.project-additional-images {
    display: grid;
    gap: 1rem;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

